--- a/visualizer.html
+++ b/visualizer.html
@@ -8,15 +8,16 @@
   <script src="https://www.youtube.com/iframe_api"></script>
 </head>
 <body>
-  <div id="input-container">
-    <input type="text" id="youtube-url" placeholder="Enter YouTube URL" />
-    <button onclick="loadVideo()">Load Video</button>
-  </div>
-
-  <div id="player-container">
-    <div id="player"></div>
-    <canvas id="visualizer"></canvas>
-  </div>
+    <div id="input-container">
+        <input type="text" id="youtube-url" placeholder="Enter YouTube URL" />
+        <button onclick="loadVideo()">Load Video</button>
+      </div>
+      
+      <div id="player-container">
+        <div id="player"></div>
+        <canvas id="visualizer" width="560" height="315"></canvas>
+      </div>
+      
 
   <script src="script.js"></script>
 </body>
