--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome</h1>
+    <h1>>Welcome To The Epic Swag Site!</h1>
     <button onclick="window.location.href='visualizer.html'">Go to Visualizer</button>
   </div>
 </body>
